added sign in/out functionality
